<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:text="@string/welcome_text"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/welcome_bid4cows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_text"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="75sp" />

    <TextView
        android:id="@+id/slogan_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_bid4cows"
        android:layout_centerHorizontal="true"
        android:text="@string/app_slogan"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="74dp"
        android:text="@string/welcome_msg" />

    <Button
        android:id="@+id/welcome_signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:text="@string/welcome_signup" />

    <Button
        android:id="@+id/welcome_signin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:text="@string/welcome_signin" />

</RelativeLayout>